[package]
name = "iprobe"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/al8n/iprobe"
homepage = "https://github.com/al8n/iprobe"
documentation = "https://docs.rs/iprobe"
description = "Probe if the host system supports IPv4, IPv6 and IPv4-mapped-IPv6."
license = "MIT OR Apache-2.0"
rust-version = "1.70"
categories = ["network-programming"]
keywords = ["netprobe", "ipprobe"]

[features]
default = []

[dependencies]
rustix = { version = "0.38", features = ["net"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
